docs/work/diag/evidence/20260222_202656/60_e2e/20260222_202656_cli_wifi_status.txt
# wifi_cli_status_session
timestamp_utc: 2026-02-22T20:28:59Z
command: python3 /tmp/luce_e2e_capture.py '/dev/cu.usbserial-40110'
status:
load-nvmrc:1: command not found: nvm
load-nvmrc:2: command not found: nvm_find_nvmrc
load-nvmrc:8: command not found: nvm
load-nvmrc:1: command not found: nvm
load-nvmrc:2: command not found: nvm_find_nvmrc
load-nvmrc:8: command not found: nvm
  File "/tmp/luce_e2e_capture.py", line 27
    print('wifi_disconnect_reconnect: manual router-control required for this capture')
                                                                                       ^
IndentationError: unindent does not match any outer indentation level
status: FAIL
exit_code: 1
